--- a/po/wesnoth-tb/it.po
+++ b/po/wesnoth-tb/it.po
@@ -1,13 +1,13 @@
 # translation of it.po to Italian
 # Luciano Montanaro <mikelima@cirulla.net>, 2006, 2008.
-# Antonio 'Antro' Rosella <arosella@yahoo.com>, 2008.
+# Antonio 'Antro' Rosella <arosella@yahoo.com>, 2008-2012
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-11-19 17:11+0100\n"
-"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
+"POT-Creation-Date: 2012-01-08 18:12+0100\n"
+"PO-Revision-Date: 2012-01-17 23:21+0100\n"
+"Last-Translator: Antonio \"Antro\" Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -53,12 +53,6 @@ msgstr "(Livello per principianti, 4 scenari)"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:21
-#, fuzzy
-#| msgid ""
-#| "An evil mage is threatening the small village of Maghre and its "
-#| "inhabitants. The village’s mage Bjarn sends for his brother to help, but "
-#| "not all goes as planned. Can you help?\n"
-#| "\n"
 msgid ""
 "An evil mage is threatening the small village of Maghre and its inhabitants. "
 "The village’s mage sends to his warrior brother for help, but not all goes "
@@ -142,15 +136,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:63
-#, fuzzy
-#| msgid ""
-#| "There was a man named Bjarn who had shown talent as a mage when he was "
-#| "young, gone to the great Academy on the Isle of Alduin, and returned to "
-#| "work his magic in the land where he was born. The people looked to him "
-#| "for help and leadership. He found weapons half-forgotten from the times "
-#| "of their sires and grandsires hanging in many houses, and bade the "
-#| "villagers to take them down and clean and oil them. He set the smiths of "
-#| "Maghre to making spearheads and ax-blades for the rest."
 msgid ""
 "There was a man named Baran who had shown talent as a mage when he was "
 "young, gone to the great Academy on the Isle of Alduin, and returned to work "
@@ -172,14 +157,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:67
-#, fuzzy
-#| msgid ""
-#| "Now Bjarn had a brother named Arne who had also left Maghre to seek his "
-#| "fortune, and had become the leader of a small band of horsemen who hired "
-#| "out as guards to merchant caravans. Fortunate it was for all that when "
-#| "Bjarn was but an apprentice mage, he had made a pair of amulets for "
-#| "himself and his brother, with which they might call to each other when in "
-#| "dire need. Bjarn sent out that call."
 msgid ""
 "Now Baran had a brother named Arvith who had also left Maghre to seek his "
 "fortune, and had become the leader of a small band of horsemen who hired out "
@@ -188,17 +165,16 @@ msgid ""
 "brother, with which they might call to each other when in dire need. Baran "
 "sent out that call."
 msgstr ""
-"Baran aveva un fratello di nome Arvith che aveva lasciato Maghre anni fa in "
-"cerca di fortuna. Egli era diventato il comandante di un piccolo gruppo di "
-"cavalieri che trovavano lavoro come guardie delle carovane dei mercanti. "
-"Fortuna volle che Baran fosse tutto meno che un mago alle prime armi: "
-"infatti egli aveva forgiato una coppia di amuleti, uno per lui ed uno per il "
-"fratello, mediante i quali essi potevano chiamarsi a vicenda in caso di "
-"necessità. Baran fece questa chiamata."
+"Ora dovete sapere che Baran aveva un fratello di nome Arvith che aveva "
+"lasciato Maghre anni fa in cerca di fortuna. Egli era diventato il "
+"comandante di un piccolo gruppo di cavalieri che trovavano lavoro come "
+"guardie delle carovane dei mercanti. Fortuna volle che Baran fosse tutto "
+"meno che un mago alle prime armi: infatti egli aveva forgiato una coppia di "
+"amuleti, uno per lui ed uno per il fratello, mediante i quali essi potevano "
+"chiamarsi a vicenda in caso di necessità. Baran fece questa chiamata."
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:76
-#, fuzzy
 msgid ""
 "12 V, 363 YW\n"
 "Excerpt from the journal of Baran of Maghre\n"
@@ -217,9 +193,9 @@ msgstr ""
 "\n"
 "Se solo potessi affrontare questo “Mordak”! Sono sicuro che la mia forza "
 "magica sia più forte della sua, ma si nasconde sulle colline, ben protetto "
-"dai suoi servi, mentre io raduno su contadini terrorizzati per combattere i "
-"suoi tirapiedi con spade e bastoni. Ho bisongo di mio fratello: ha sempre "
-"avuto più testa di me per le battaglie.\n"
+"dai suoi servi, mentre io riesco a tirare su soltanto contadini "
+"terrorizzati, per poi combattere i suoi tirapiedi con spade e bastoni. Ho "
+"bisogno di mio fratello: ha sempre avuto più testa di me per le battaglie.\n"
 " \n"
 "Presterà attenzione alla chiamata? Non so se conservi ancora l’amuleto: non "
 "ci siamo più sentiti da quello sciagurato giorno a Toen Caric. Se non "
@@ -228,10 +204,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:80
-#, fuzzy
-#| msgid ""
-#| "Heeding the call of his amulet, Arne gathered such men as he could and "
-#| "hurried to Maghre to help Bjarn."
 msgid ""
 "Heeding the call of his amulet, Arvith gathered such men as he could and "
 "hurried to Maghre to help Baran."
@@ -254,8 +226,6 @@ msgstr "Uccidi Mordak, il mago malvagio"
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:824
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:60
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:255
-#, fuzzy
-#| msgid "Death of Arne"
 msgid "Death of Arvith"
 msgstr "Morte di Arvith"
 
@@ -357,8 +327,6 @@ msgstr "Comandi."
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:215
-#, fuzzy
-#| msgid "Is that all, Arne? I understand, but..."
 msgid "Is that all, Arvith? I understand, but..."
 msgstr "Tutto qui, Arvith? Capisco, ma..."
 
@@ -420,10 +388,6 @@ msgstr "... Andata. Fai solo in modo di essere là quando avremo bisogno di te."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:250
-#, fuzzy
-#| msgid ""
-#| "Bjarn should be in position by now. Press them, distract the adept so "
-#| "Bjarn can spring his trap!"
 msgid ""
 "Baran should be in position by now. Press them, distract the adept so Baran "
 "can spring his trap!"
@@ -433,8 +397,6 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:258
-#, fuzzy
-#| msgid "Bjarn has not made his attack!"
 msgid "Baran has not made his attack!"
 msgstr "Baran non ha attaccato!"
 
@@ -469,10 +431,6 @@ msgstr "Siete preoccupati per lui? Eh-eh-eh... ergh... gaargh..."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:293
-#, fuzzy
-#| msgid ""
-#| "There’s nothing more to be had from this one; we will have to search for "
-#| "Bjarn ourselves!"
 msgid ""
 "There’s nothing more to be had from this one; we will have to search for "
 "Baran ourselves!"
@@ -480,10 +438,6 @@ msgstr "Questo qui non ha nient’altro da dirci: dovremo trovare Baran da soli!
 
 #. [message]: role=Reporter
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:301
-#, fuzzy
-#| msgid ""
-#| "Sir, our scouts report that Bjarn was seen captured and carried away "
-#| "further north!"
 msgid ""
 "Sir, our scouts report that Baran was seen captured and carried away further "
 "north!"
@@ -505,10 +459,6 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/01_Rooting_Out_a_Mage.cfg:323
-#, fuzzy
-#| msgid ""
-#| "My brother, kidnapped? I have failed you, Bjarn! And even now Mordak’s "
-#| "forces descend upon the village!"
 msgid ""
 "My brother, kidnapped? I have failed you, Baran! And even now Mordak’s "
 "forces descend upon the village!"
@@ -541,8 +491,6 @@ msgstr "L’inseguimento"
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:30
-#, fuzzy
-#| msgid "Arne and his band rode north in search of his missing brother."
 msgid "Arvith and his band rode north in search of his missing brother."
 msgstr ""
 "Arvith e il suo gruppo cavalcarono verso nord in cerca del fratello "
@@ -550,7 +498,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:41
-#, fuzzy
 msgid ""
 "16 V, 363 YW\n"
 "Excerpt from the journal of Arvith of Maghre\n"
@@ -587,7 +534,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:50
-#, fuzzy
 msgid ""
 "16 V, 363 YW\n"
 "Excerpt from the journal of Arvith of Maghre\n"
@@ -614,9 +560,9 @@ msgstr ""
 "pericolosi nel proprio territorio. Ma ci sono cose che vanno fatte e domande "
 "che hanno bisogno di risposte. Qualcosa di grosso sta accadendo. Un "
 "negromante che terrorizza dei cittadini non è certo una novità, ma perché i "
-"suoi servitori non si sono sparpagliati quando è morto? Dove si staranno "
+"suoi servitori non si sono sparpagliati quando è morto? Dove si stanno "
 "dirigendo? E poi, cosa più importante di tutte, perché hanno preso Baran con "
-"sé?\n"
+"loro?\n"
 "\n"
 "Comunque... io rivoglio indietro mio fratello."
 
@@ -665,10 +611,6 @@ msgstr ""
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:256
-#, fuzzy
-#| msgid ""
-#| "So much for those ghost stories. Mere elves will not stop me from freeing "
-#| "Bjarn!"
 msgid ""
 "So much for those ghost stories. Mere elves will not stop me from freeing "
 "Baran!"
@@ -806,10 +748,6 @@ msgstr "Legatelo e portatelo via con noi. Se ci ha mentito, morirà."
 
 #. [message]: role=speaker
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:397
-#, fuzzy
-#| msgid ""
-#| "Captain, what are we riding into? I thought you wanted nothing to do with "
-#| "Bjarn any more, not since Toen Caric."
 msgid ""
 "Captain, what are we riding into? I thought you wanted nothing to do with "
 "Baran any more, not since Toen Caric."
@@ -942,7 +880,6 @@ msgstr "Castello protetto"
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:54
-#, fuzzy
 msgid ""
 "19 IV, 363 YW\n"
 "Excerpt from the journal of Rotharik the Clanless\n"
@@ -1054,17 +991,11 @@ msgstr "Guardia del castello"
 
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:210
-#, fuzzy
-#| msgid "Rescue Bjarn"
 msgid "Rescue Baran"
 msgstr "Libera Baran"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:309
-#, fuzzy
-#| msgid ""
-#| "Arne and his men halt outside of the castle, gazing for a moment at the "
-#| "hulking mass of stone looming in the fog. There is movement in the mist."
 msgid ""
 "Arvith and his men halt outside of the castle, gazing for a moment at the "
 "hulking mass of stone looming in the fog. There is movement in the mist."
@@ -1247,10 +1178,6 @@ msgstr "C’è una chiave nella sua veste."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:682
-#, fuzzy
-#| msgid ""
-#| "That may well be the key to the cell they’re holding Bjarn in! I will "
-#| "take it."
 msgid ""
 "That may well be the key to the cell they’re holding Baran in! I will take "
 "it."
@@ -1260,8 +1187,6 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:688
-#, fuzzy
-#| msgid "Move Arne to the cell with his brother to free him"
 msgid "Move Arvith to the cell with his brother to free him"
 msgstr "Muovi Arvith nella cella per liberare il fratello"
 
@@ -1277,15 +1202,11 @@ msgstr "Guarda cosa ho trovato qui! Cinquanta pezzi d’oro."
 
 #. [message]: speaker=unit
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:783
-#, fuzzy
-#| msgid "I found Bjarn. He is in this cell."
 msgid "I found Baran. He is in this cell."
 msgstr "Ho trovato Baran. È in questa cella."
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:793
-#, fuzzy
-#| msgid "It’s good to see you, Arne."
 msgid "It’s good to see you, Arvith."
 msgstr "Sono felice di rivederti, Arvith."
 
@@ -1296,9 +1217,6 @@ msgstr "Anche io te, fratello."
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:803
-#, fuzzy
-#| msgid ""
-#| "You must be one of Arne’s men. Please help me get out of this dungeon."
 msgid ""
 "You must be one of Arvith’s men. Please help me get out of this dungeon."
 msgstr ""
@@ -1328,8 +1246,6 @@ msgstr "Grazie per avermi salvato. Quasi... non ci speravo più, ormai."
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:865
-#, fuzzy
-#| msgid "Have you no faith in your brother, Bjarn?"
 msgid "Have you no faith in your brother, Baran?"
 msgstr "Non hai fiducia in tuo fratello, Baran?"
 
@@ -1389,7 +1305,6 @@ msgstr "Ritorno al villaggio"
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:37
-#, fuzzy
 msgid ""
 "27 V, 363 YW\n"
 "Excerpt from the journal of Baran of Maghre\n"
@@ -1427,7 +1342,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:47
-#, fuzzy
 msgid ""
 "27 V, 363 YW\n"
 "Excerpt from the journal of Baran of Maghre\n"
@@ -1475,8 +1389,6 @@ msgstr "Scopri cosa sta succedendo nel villaggio"
 #. [objective]: condition=lose
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:64
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:259
-#, fuzzy
-#| msgid "Death of Bjarn"
 msgid "Death of Baran"
 msgstr "Morte di Baran"
 
@@ -1515,7 +1427,6 @@ msgstr "Uomini! Preparate le vostre armi!"
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:174
-#, fuzzy
 msgid "We should find Reeve Hoban. Maybe he knows what is going on here."
 msgstr ""
 "Dovremmo trovare l’Alto Magistrato Hoban. Forse sa cosa sta succedendo qui."
@@ -1602,10 +1513,6 @@ msgstr "Uccidi l’Orco Signore della Guerra per liberare il villaggio"
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:271
-#, fuzzy
-#| msgid ""
-#| "It is finished. We’ve defeated him at last. It was good to have you at my "
-#| "side, Bjarn."
 msgid ""
 "It is finished. We’ve defeated him at last. It was good to have you at my "
 "side, Baran."
@@ -1658,7 +1565,6 @@ msgstr "Racconto di due fratelli — Epilogo"
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/05_Epilogue.cfg:25
-#, fuzzy
 msgid ""
 "22 IX, 365 YW\n"
 "Excerpt from the journal of Arvith of Maghre\n"
