--- a/po/wesnoth-tutorial/it.po
+++ b/po/wesnoth-tutorial/it.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-08 18:12+0100\n"
-"PO-Revision-Date: 2012-01-17 11:00+0100\n"
-"Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2012-01-17 22:09+0100\n"
+"Last-Translator: Antonio \"Antro\" Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
@@ -311,7 +311,7 @@ msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Konrad) is killed."
 msgstr ""
-"la coroncina metallica vicino a Delfador significa che se fosse ucciso la "
+"La coroncina metallica vicino a Delfador significa che se fosse ucciso la "
 "partita sarebbe persa. Lo stesso accadrebbe se il tuo condottiero (Konrad) "
 "cadesse in battaglia."
 
@@ -1068,7 +1068,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:495
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:496
 msgid "Shallow"
-msgstr "Guado"
+msgstr "Acque basse"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:497
